--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -1,9 +1,11 @@
-.user__container {
+.catalog {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
 }
-.user__window {
-  width: 200px;
-  background-color: rgb(179, 177, 177);
-  border: 2px solid rgb(35, 35, 35);
+.menu__container {
+  width: 300px;
+}
+.active {
+  color: red;
+  background-color: royalblue;
 }
