--- a/src/router/Header.module.css
+++ b/src/router/Header.module.css
@@ -13,7 +13,7 @@
   font-weight: 600;
   background: none;
   border: none;
-  background: url(../assets/images/menu.svg) no-repeat center left;
+  background: url(../assets/images/nav/menu.svg) no-repeat center left;
   background-size: contain;
   cursor: pointer;
   transition: 1s;
@@ -37,27 +37,26 @@
 }
 
 .header__search_btn {
-  background: url(../assets/images/search.svg) no-repeat center center;
+  background: url(../assets/images/nav/search.svg) no-repeat center center;
   background-size: contain;
 }
-
 .header__user_btn {
-  background: url(../assets/images/user.svg) no-repeat center center;
+  background: url(../assets/images/nav/user.svg) no-repeat center center;
   background-size: contain;
 }
 
 .header__compare_btn {
-  background: url(../assets/images/histogram3.svg) no-repeat center center;
+  background: url(../assets/images/nav/histogram3.svg) no-repeat center center;
   background-size: contain;
 }
 
 .header__basket_btn {
-  background: url(../assets/images/basket.svg) no-repeat center center;
+  background: url(../assets/images/nav/basket.svg) no-repeat center center;
   background-size: contain;
 }
 
 .header__favorite_btn {
-  background: url(../assets/images/heart.svg) no-repeat center center;
+  background: url(../assets/images/nav/heart.svg) no-repeat center center;
   background-size: contain;
 }
 
@@ -73,8 +72,3 @@
   display: flex;
   justify-content: space-between;
 }
-/* 
-.header__search {
-  display: flex;
-  justify-content: space-between;
-} */
