--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -10,3 +10,17 @@
   background: url(../../assets/images/nav/heart.svg) no-repeat center left;
   background-size: contain;
 }
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(238, 231, 231);
+  height: 100%;
+}
+.card:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+.card__image {
+  width: 190px;
+  height: 100%;
+}
