--- a/src/components/FilterMenu/FilterMenu.module.css
+++ b/src/components/FilterMenu/FilterMenu.module.css
@@ -15,8 +15,18 @@
 .filter__label {
   display: flex;
   align-items: center;
+  justify-content: center;
+  font-weight: 400;
+  font-family: "Lato";
+  font-family: sans-serif;
 }
 .active {
   color: brown;
   background-color: chartreuse;
+}
+.filter__icon {
+  width: 25px;
+  height: 25px;
+  background: url(../../assets/images/nav/filter.svg) no-repeat center center;
+  background-size: contain;
 }
