--- a/src/components/HomePage/HomePage.module.css
+++ b/src/components/HomePage/HomePage.module.css
@@ -1,6 +1,19 @@
-.home__container {
+.wrap {
   display: flex;
-  flex-direction: row;
+  background-color: white;
+  border: 1px solid black;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  padding-right: 170px;
+}
+.filters {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
 }
 .main {
   display: grid;
