--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -2,10 +2,28 @@
   display: flex;
   flex-direction: column;
 }
-.menu__container {
-  width: 300px;
+.container {
+  width: 400px;
+  background-color: #19222a;
+  font-weight: 400;
+  font-family: "Lato";
+  font-family: sans-serif;
 }
-.active {
-  color: red;
-  background-color: royalblue;
+.catalog__item {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  color: white;
+  text-decoration: none;
+}
+.catalog__item:active {
+  color: blueviolet;
+}
+.catalog__item:hover {
+  background-color: rgba(255, 255, 255, 0.05);
+}
+.catalog__arrow {
+  width: 10px;
+  background: url(../../assets/images/nav/white_arrow.svg) no-repeat center center;
+  background-size: contain;
 }
