--- a/src/router/Header.module.css
+++ b/src/router/Header.module.css
@@ -1,6 +1,6 @@
 .header {
   padding-top: 42px;
-  background-color: #404145;
+  background-color: #19222a;
 }
 
 .header__menu_btn {
@@ -11,6 +11,7 @@
   height: 30px;
   font-size: 1.125rem;
   font-weight: 600;
+  text-decoration: none;
   background: none;
   border: none;
   background: url(../assets/images/nav/menu.svg) no-repeat center left;
@@ -65,6 +66,7 @@
   justify-content: space-around;
   align-items: center;
   padding: 10px 0;
+  margin-bottom: 40px;
   background-color: #ffffff;
 }
 
