--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -33,3 +33,7 @@
   background: url(../../assets/images/nav/search.svg) no-repeat center center;
   background-size: contain;
 }
+.form {
+  display: flex;
+  align-items: center;
+}
