--- a/src/components/All/All.module.css
+++ b/src/components/All/All.module.css
@@ -1,10 +1,26 @@
-.home__container {
+.wrap {
   display: flex;
-  flex-direction: row;
+
+  border: 1px solid black;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  padding-right: 170px;
+}
+.filters {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 10px;
+  background-color: white;
 }
 .main {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   justify-content: center;
   align-items: center;
+  width: 913px;
+  background-color: rgb(238, 231, 231);
 }
