--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,6 +1,3 @@
-.card__image {
-  width: 40%;
-}
 .card__like_btn {
   width: 25px;
   height: 25px;
@@ -10,17 +7,55 @@
   background: url(../../assets/images/nav/heart.svg) no-repeat center left;
   background-size: contain;
 }
+.card__like_btn:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
 .card {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
   background-color: rgb(238, 231, 231);
   height: 100%;
+  font-family: "Lato";
+  font-family: sans-serif;
+  font-weight: normal;
+  font-size: 12px;
 }
 .card:hover {
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 5px 26px 2px rgba(0, 0, 0, 0.2) inset;
 }
 .card__image {
-  width: 190px;
-  height: 100%;
+  width: 210px;
+}
+.card__add_btn {
+  width: 25px;
+  height: 25px;
+  margin: 2px;
+  background: white;
+  color: rebeccapurple;
+  border: none;
+  background: url(../../assets/images/nav/basket.svg) no-repeat center left;
+  background-size: contain;
+}
+/* .card__add_btn:active {
+  background: url(../../assets/images/nav/basket.svg) no-repeat center left;
+  background-size: contain;
+} */
+.card__add_btn:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+.card__buttons {
+  display: flex;
+  align-items: center;
+}
+.card__price {
+  margin-right: 10px;
+}
+
+.card__text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
