--- a/src/components/CardItem/CardItem.module.css
+++ b/src/components/CardItem/CardItem.module.css
@@ -1,3 +1,87 @@
 .card__image {
-  width: 50%;
+  width: 320px;
+  margin: 0 190px;
+}
+.card__content {
+  display: flex;
+}
+.main {
+  background-color: rgb(225, 210, 210);
+}
+.card__name {
+  display: flex;
+  align-items: center;
+  padding: 20px 0;
+}
+
+.card__description {
+  width: 500px;
+  font-size: 20px;
+  font-family: "Lato";
+  font-family: sans-serif;
+}
+.card__order {
+  margin: 80px 0;
+}
+.card__symbol {
+  margin: 0 10px;
+  font-size: 34px;
+  font-family: "Lato";
+  font-family: sans-serif;
+  font-weight: 900;
+}
+.card__brand {
+  font-size: 34px;
+  font-family: "Lato";
+  font-family: sans-serif;
+}
+.card__title {
+  font-size: 34px;
+  font-family: "Lato";
+  font-family: sans-serif;
+}
+.card__price {
+  font-size: 34px;
+  font-family: "Lato";
+  font-family: sans-serif;
+}
+.card__info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.card__button {
+  width: 50px;
+  height: 45px;
+  font-size: 18px;
+  font-family: "Lato";
+  font-family: sans-serif;
+  border: 1px solid black;
+}
+.card__button:hover {
+  background-color: violet;
+}
+.card__back_btn {
+  display: flex;
+  align-items: center;
+  margin: 0 120px 0 15px;
+  border: none;
+  background: none;
+  transition: 1s;
+}
+.card__back_btn:hover {
+  color: blueviolet;
+  transform: scale(1.2);
+}
+.card__back_text {
+  font-family: "Lato";
+  font-family: sans-serif;
+  font-weight: 700;
+}
+.card__back_arrow {
+  width: 20px;
+  height: 40px;
+  border: none;
+  background: url(../../assets/images/nav/left_arrow.svg) no-repeat center left;
+  background-size: contain;
 }
