--- a/src/components/Favorites/Favorites.module.css
+++ b/src/components/Favorites/Favorites.module.css
@@ -6,6 +6,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  font-family: "Lato";
+  font-family: sans-serif;
 }
 .card__brand {
   text-transform: uppercase;
@@ -18,6 +20,7 @@
   margin: 5px;
   border: 2px solid black;
   box-shadow: black;
+  background-color: rgb(243, 226, 226);
 }
 .card__order {
   display: flex;
