--- a/src/components/FilterMenu/FilterMenu.module.css
+++ b/src/components/FilterMenu/FilterMenu.module.css
@@ -1,16 +1,26 @@
 .filter {
   position: relative;
+  display: flex;
+  align-items: center;
+  margin: 10px 10px 0;
+}
+.filter__title {
+  font-weight: 700;
+  font-family: "Lato";
+  font-family: sans-serif;
 }
 .filter__popup {
   position: absolute;
   right: 0;
-  margin-top: 15px;
+  margin-top: 20px;
   background: white;
-  box-shadow: 0px 5px 15px violet;
-  border-radius: 10px;
+  box-shadow: 0px 5px 15px gray;
+  border-radius: 2px;
   overflow: hidden;
-  padding: 10px 0px;
-  width: 160px;
+  width: 100px;
+  font-family: "Lato";
+  font-family: sans-serif;
+  font-size: 15px;
 }
 .filter__label {
   display: flex;
@@ -28,5 +38,39 @@
   width: 25px;
   height: 25px;
   background: url(../../assets/images/nav/filter.svg) no-repeat center center;
+  background-size: contain;
+}
+.brand__popup {
+  position: absolute;
+  left: 100px;
+  margin-top: 20px;
+  background: white;
+  box-shadow: 0px 5px 15px gray;
+  border-radius: 2px;
+  overflow: hidden;
+  width: 100px;
+  font-family: "Lato";
+  font-family: sans-serif;
+  font-size: 15px;
+}
+.popup__item {
+  display: flex;
+  justify-self: center;
+  align-items: center;
+  padding: 5px;
+}
+.popup__item:hover {
+  background-color: rgb(203, 181, 225);
+}
+.brand__popup_checkbox {
+  width: 10px;
+  height: 10px;
+  background: url(../../assets/images/nav/right_arrow.svg) no-repeat center left;
+  background-size: contain;
+}
+.filter__popup_checkbox {
+  width: 10px;
+  height: 10px;
+  background: url(../../assets/images/nav/right_arrow.svg) no-repeat right center;
   background-size: contain;
 }
