--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -1,18 +1,19 @@
 .slider__wrapper {
-  width: 70%;
+  width: 60%;
   margin: 0 auto;
 }
 .slick__slide {
+  display: flex;
+  justify-content: center;
   text-align: center;
   position: relative;
-  margin: 25px 0;
 }
 .slick__slide:focus {
   outline: none;
 }
 .slick__slide_image {
-  height: auto;
-  max-width: 100%;
+  height: 100%;
+  width: 100%;
   border-radius: 8px;
   box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25), 0 8px 16px -8px hsla(0, 0%, 0%, 0.3),
     0 -6px 16px -6px hsla(0, 0%, 0%, 0.03);
