--- a/src/components/User/User.module.css
+++ b/src/components/User/User.module.css
@@ -1,8 +1,11 @@
 .user__container {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 .user__window {
+  display: flex;
+  justify-content: center;
   width: 200px;
   background-color: rgb(179, 177, 177);
   border: 2px solid rgb(35, 35, 35);
